<resources>
    <string name="app_name">CRMONE</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_botton">ACCEDER</string>
    <string name="login_text_bottom">https://www.crmone.es</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="required">requerido (*)</string>
</resources>